# customization-linux

./: CMakeLists.txt  albert_0.26.13-0+667.1_amd64.deb  install Fedora KDE.txt  install KDE Neon.txt  install KDE Neon2.txt  install KDE Neon3.txt  install KDE.txt
forest-assets/: Unihalfy-single-p-dual-d-f.layout.latte  Unihalfy-single-p-dual-d.layout.latte  Unihalfy-single-p-single-d-f.layout.latte  Unihalfy-single-p-single-d.layout.latte
